--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -19,7 +19,7 @@
       "type": "series",
       "name": "My Hero Academia FINAL SEASON",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182896-mvxTVHGdDB4q.jpg",
-      "description": "Genres: Action, Adventure\nTags:Superhero/Super Power/Shounen/War/Male Protagonist/Rescue\nThe eighth and final season of <i>Boku no Hero Academia</i>.<br><br>\n\nDeku and the heroes are plunged into a final battle against villains across Japan. Deku, by fully unleashing One For All Quirks, faces off against Shigaraki. A young and refreshed All For One faces Armored All Might, Quirkless in his powered armor suit. Will Deku be able to bring the story of how they all became the greatest heroes to its finale? Or will everything be destroyed?!<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure\nTags:Superhero/Shounen/Super Power/Male Protagonist/War/Rescue\nThe eighth and final season of <i>Boku no Hero Academia</i>.<br><br>\n\nDeku and the heroes are plunged into a final battle against villains across Japan. Deku, by fully unleashing One For All Quirks, faces off against Shigaraki. A young and refreshed All For One faces Armored All Might, Quirkless in his powered armor suit. Will Deku be able to bring the story of how they all became the greatest heroes to its finale? Or will everything be destroyed?!<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt12063450",
@@ -113,11 +113,18 @@
       "description": "Genres: Drama, Sports\nTags:Dancing/School Club/School/Seinen/Disability/CGI/Male Protagonist/Female Protagonist\nKaboku Kotani is starting high school, and he plans to do what he’s always done: go along with his friends, keep quiet, and not draw too much attention to himself. After all, it’s hard enough to get by with a stutter like his— why make things worse by standing out from the crowd? But then he sees another first-year, Hikari Wanda, dancing like no one is watching—or like she doesn’t care who sees her. It makes Kaboku wonder: Could he reach that same freedom? To find his way to Wanda, he does something he never thought he could: He joins the dance club. After all, every routine begins with a single step, right? Join Kaboku and Wanda as they freestyle their way to life and love!\n<br><br>\n(Source: Kodansha USA)"
     },
     {
-      "id": "tt34660911",
+      "id": "tt32582999",
       "type": "series",
-      "name": "GINTAMA - Mr. Ginpachi's Zany Class",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162890-IXcik7NFdi3G.jpg",
-      "description": "Genres: Comedy\nTags:School/Surreal Comedy/Parody/Educational/Aliens/Shounen\nAn anime adaptation of the <i>Gintama</i> light novel spin-off.\n<br><br>\n<i>3-nen Z-gumi Ginpachi-sensei</i> reimagines Gintoki Sakata as an eccentric homeroom teacher, guiding his equally unique students through hilarious and often nonsensical lessons.\n<br><br>\n(Source: TV TOKYO presents \"GINTAMA - Mr. Ginpachi's Zany Class\" Anime Expo 2025 Panel, edited) \n<br><br>\n<i>Note: Announced at the the \"Gintama Ato no Matsuri 2023\" event."
+      "name": "Hero Without a Class: Who Even Needs Skills?!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169969-SqCjoqYT4A6Z.jpg",
+      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Shounen/Male Protagonist/Swordplay/Magic/Rural/Dungeon\nIn a world where one’s class determines everything, Arel, the son of a Sword Princess and an Archmage, was expected to inherit greatness. But when he discovers he’s classless, everything changes. Now he’s determined to prove that hard work and dedication are enough to not just succeed, but to excel as an adventurer!\n<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Mushoku no Eiyuu: Betsu ni Skill nanka Ira Nakattan Daga was streamed a week in advance of the TV broadcast on dAnimestore, ABEMA and HIDIVE beginning September 24, 2025. Regular broadcasting began on October 1, 2025.</i>"
+    },
+    {
+      "id": "tt37679127",
+      "type": "series",
+      "name": "Bukiyou na Senpai.",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b185575-cRHKCLmJI4Fr.jpg",
+      "description": "Genres: Comedy, Romance\nTags:Seinen/Office Lady/Tsundere/Urban/Primarily Adult Cast\nKannawa-senpai is considered many things, but smooth is definitely not one of them. Then she meets Kamegawa, her new Kouhai. He's cute, a little nerdy, and easy to talk to. How will this awkward Senpai be able to handle these new feelings?! \n<br><br>\n(Source: Comikey) "
     },
     {
       "id": "tt30488398",
@@ -127,11 +134,11 @@
       "description": "Genres: Adventure, Comedy, Ecchi, Fantasy, Romance\nTags:Seinen\nThe second season of <i>Kekkon Yubiwa Monogatari.</i> <br><br>\n\nSato and his party are back, but will they finally manage to defeat the Abyss King and gain peace?\n\n<br><br>(Source: Crunchyroll News)"
     },
     {
-      "id": "tt37679127",
+      "id": "tt34660911",
       "type": "series",
-      "name": "Bukiyou na Senpai.",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b185575-cRHKCLmJI4Fr.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Seinen/Office Lady/Tsundere/Urban/Primarily Adult Cast\nKannawa-senpai is considered many things, but smooth is definitely not one of them. Then she meets Kamegawa, her new Kouhai. He's cute, a little nerdy, and easy to talk to. How will this awkward Senpai be able to handle these new feelings?! \n<br><br>\n(Source: Comikey) "
+      "name": "GINTAMA - Mr. Ginpachi's Zany Class",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162890-IXcik7NFdi3G.jpg",
+      "description": "Genres: Comedy\nTags:School/Surreal Comedy/Parody/Educational/Aliens/Shounen\nAn anime adaptation of the <i>Gintama</i> light novel spin-off.\n<br><br>\n<i>3-nen Z-gumi Ginpachi-sensei</i> reimagines Gintoki Sakata as an eccentric homeroom teacher, guiding his equally unique students through hilarious and often nonsensical lessons.\n<br><br>\n(Source: TV TOKYO presents \"GINTAMA - Mr. Ginpachi's Zany Class\" Anime Expo 2025 Panel, edited) \n<br><br>\n<i>Note: Announced at the the \"Gintama Ato no Matsuri 2023\" event."
     },
     {
       "id": "tt36593026",
@@ -155,13 +162,6 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Magic/Primarily Female Cast/Female Protagonist/Gender Bending/Virtual World/Video Games/Super Power\nAn MMO gamer awakens as the Black-Winged Tyrant, Lufas Maphaahl, rising from her sealed fate—only to find this is very real. Her defeat 200 years ago unleashed monsters of death, and the legend is one of terror. Now, trapped in the body of history’s most feared conqueror, he must survive a world that wants her dead…and uncover why he’s here.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt32582999",
-      "type": "series",
-      "name": "Hero Without a Class: Who Even Needs Skills?!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169969-SqCjoqYT4A6Z.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Shounen/Male Protagonist/Swordplay/Dungeon/Magic/Rural\nIn a world where one’s class determines everything, Arel, the son of a Sword Princess and an Archmage, was expected to inherit greatness. But when he discovers he’s classless, everything changes. Now he’s determined to prove that hard work and dedication are enough to not just succeed, but to excel as an adventurer!\n<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Mushoku no Eiyuu: Betsu ni Skill nanka Ira Nakattan Daga was streamed a week in advance of the TV broadcast on dAnimestore, ABEMA and HIDIVE beginning September 24, 2025. Regular broadcasting began on October 1, 2025.</i>"
-    },
-    {
       "id": "tt36833523",
       "type": "series",
       "name": "Tatsuki Fujimoto 17-26",
@@ -173,14 +173,14 @@
       "type": "series",
       "name": "Inexpressive Kashiwada and Expressive Oota",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx187940-3ugUhO9h0luh.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Shounen/Kuudere/Heterosexual\nMeet Kashiwada-san, a female middle-school student, who remains emotionless regardless of how she is meddled with.\nAnd Oota-kun, unable to control his facial expressions, is the complete opposite of Kashiwada-san--but he keeps messing with her, against his better judgment?!\n<br><br>\nThough both of them are the exact opposite, will a mutual love eventually develop between them...?"
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Shounen/Kuudere/Heterosexual/School\nMeet Kashiwada-san, a female middle-school student, who remains emotionless regardless of how she is meddled with.\nAnd Oota-kun, unable to control his facial expressions, is the complete opposite of Kashiwada-san--but he keeps messing with her, against his better judgment?!\n<br><br>\nThough both of them are the exact opposite, will a mutual love eventually develop between them...?"
     },
     {
       "id": "tt36190100",
       "type": "series",
       "name": "Dusk Beyond the End of the World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195153-yiRxZP5pPJLi.png",
-      "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Heterosexual/Dystopian/Robots/Post-Apocalyptic\nWhen growing tensions around AI spark civil unrest, Akira is caught in the crossfire when he protects his girlfriend from an assassin’s bullet. Hundreds of years later, he awakens from cryogenic sleep to an unfamiliar world. As he struggles to come to terms with his new reality, he bonds with an android called Yugure, who bears an uncanny resemblance to his girlfriend. Now, he must ask himself what love means in a world where technology has changed the very fabric of society.<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
+      "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Heterosexual/Robots/Dystopian/Post-Apocalyptic/Artificial Intelligence/Male Protagonist/Gore\nWhen growing tensions around AI spark civil unrest, Akira is caught in the crossfire when he protects his girlfriend from an assassin’s bullet. Hundreds of years later, he awakens from cryogenic sleep to an unfamiliar world. As he struggles to come to terms with his new reality, he bonds with an android called Yugure, who bears an uncanny resemblance to his girlfriend. Now, he must ask himself what love means in a world where technology has changed the very fabric of society.<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
     },
     {
       "id": "tt32777700",
@@ -190,18 +190,18 @@
       "description": "Genres: Fantasy, Romance\nTags:Magic/Isekai\nEllen, an 8-year-old girl and half-spirit, once lived as a scientist in modern-day Japan. Now she’s been reincarnated into a new family: Rovel, her father and the kingdom’s legendary hero, and Origin, her mother and the queen of spirits. On top of that, Ellen herself has the power to manipulate chemical elements! But are Ellen’s powers enough to protect their family’s happiness?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt36132068",
-      "type": "series",
-      "name": "Yano-kun's Ordinary Days",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183965-7oMzkJp4FUyP.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/School/Primarily Teen Cast/Heterosexual\nKiyoko Yoshida is an overanxious class representative who can’t help but worry about Tsuyoshi Yano, who sits beside her. Tsuyoshi comes to school covered in bruises, and as Kiyoko tends to him day after day, the two draw closer. Where will Kiyoko’s feelings take her? Will Tsuyoshi’s life ever be normal? A romantic comedy between an anxious girl and a boy who’s always injured is about to begin!\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt36631539",
       "type": "series",
       "name": "The Banished Court Magician Aims to Become the Strongest",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188487-gewgvReLVli9.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon/Male Protagonist\n<i>\"This party does not need a useless magician who can only use support magic. You are fired, Alec Huguette.\"</i>\n<BR><BR>\nOne day, Alec, a court magician who had been chaperoning the Crown Prince's dungeon-crawling party, was suddenly fired and banished from the court by the prince. The only one who reached out to him is Yoruha, his former party member from their Academy of Magic days, that had split up four years ago. \n<BR><BR>\n<i>\"Hey Alec— would you like to come explore dungeons with us again?\"</i>\n<BR><BR>\nThus the legendary \"Lasting Period\" party was revived, and the name will soon became known all over the world once again.\n<BR><BR>\n(Source: Lanove Bunko, translated)"
+    },
+    {
+      "id": "tt36132068",
+      "type": "series",
+      "name": "Yano-kun's Ordinary Days",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183965-7oMzkJp4FUyP.jpg",
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/School/Primarily Teen Cast/Heterosexual\nKiyoko Yoshida is an overanxious class representative who can’t help but worry about Tsuyoshi Yano, who sits beside her. Tsuyoshi comes to school covered in bruises, and as Kiyoko tends to him day after day, the two draw closer. Where will Kiyoko’s feelings take her? Will Tsuyoshi’s life ever be normal? A romantic comedy between an anxious girl and a boy who’s always injured is about to begin!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt38037460",
@@ -281,18 +281,18 @@
       "description": "Genres: Comedy, Ecchi, Romance, Sports\nTags:Female Harem/Male Protagonist/Medicine/Shounen/School/Primarily Female Cast/Nudity\nKotesashi Kouyou possesses outstanding skill as a masseur. He aspires to become a sports doctor and wants to get a scholarship in medical school. Starting spring, he attends the high school attached to Seiwa University, a sports powerhouse. Since his family is not wealthy, he has to work as a hostel manager, where he is also allowed to stay, to pay for his school expenses. There he encounters high school girl athletes with various problems. Kotesashi's job is to take care of them physically and mentally and be the hostel manager.<br><br>\n\n(Source: Kodansha, translated)"
     },
     {
-      "id": "tt32832412",
-      "type": "series",
-      "name": "With You, Our Love Will Make It Through",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186161-rgdRQgwOJUpb.png",
-      "description": "Genres: Drama, Fantasy, Romance\nTags:Shoujo/Anthropomorphism/Heterosexual/Female Protagonist/School/Kemonomimi/CGI\nWhen high schooler Mari bumps into a fellow tardy student, she's surprised to find out he's a beastfolk who's to attend her school! After all, it's not rare for beastfolk to coexist alongside humans, but it's still uncommon, with the prejudice and all. Nervous to meet one at first, Mari soon learns there's more to him than his furry exterior. In fact, the more she gets to know him, the more she finds herself drawn to him, his steadfastness, his kindheartedness, and…his body…\n<BR><BR>\n(Source: Yen Press)"
-    },
-    {
       "id": "tt32779175",
       "type": "series",
       "name": "The Dark History of the Reincarnated Villainess",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174914-RfPIqbrapByY.jpg",
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Shoujo/Isekai/Female Protagonist/Villainess\nKonoha Satou’s dark fictional past becomes her reality when she’s reincarnated as Iana Magnolia, the villainess of her own adolescent fantasy. Now as a role she meticulously designed to be despicable, remembering every last detail is a matter of life and death. Will she be able to rewrite her character’s fate into something peaceful?\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt32832412",
+      "type": "series",
+      "name": "With You, Our Love Will Make It Through",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186161-rgdRQgwOJUpb.png",
+      "description": "Genres: Drama, Fantasy, Romance\nTags:Shoujo/Anthropomorphism/Heterosexual/Female Protagonist/School/Kemonomimi/CGI\nWhen high schooler Mari bumps into a fellow tardy student, she's surprised to find out he's a beastfolk who's to attend her school! After all, it's not rare for beastfolk to coexist alongside humans, but it's still uncommon, with the prejudice and all. Nervous to meet one at first, Mari soon learns there's more to him than his furry exterior. In fact, the more she gets to know him, the more she finds herself drawn to him, his steadfastness, his kindheartedness, and…his body…\n<BR><BR>\n(Source: Yen Press)"
     },
     {
       "id": "tt36593047",
@@ -316,18 +316,18 @@
       "description": "Genres: Action, Adventure, Sci-Fi\nTags:Anthology/Episodic/Space/Ensemble Cast\nThe critically-acclaimed series of animated shorts returns to Japan for a third installment in collaboration with nine anime studios.<br><br>\n\n1) <i>The Duel: Payback</i> (Mizuno Takanobu, Kamikaze Douga x Anima) <br>\n2) <i>The Lost Ones</i>  (Hitoshi Haga, Kinema Citrus) <br>\n3) <i>The Ninth Jedi: Child of Hope</i> (Naoyoshi Shiotani, Production I.G.) <br>\n4) <i>Yuko's Treasure</i> (Masaki Tachibana, Kinema Citrus)<br>\n5) <i>The Smuggler</i> (Masahiko Ootsuka, Trigger) <br>\n6) <i>The Bounty Hunters</i> (Junichi Yamamoto, Wit Studio) <br>\n7) <i>The Song of Four Wings</i> (Hiroyasu Kobayashi, Project Studio Q) <br>\n8) <i>Bird of Paradise</i> (Tadahiro Yoshihira, Polygon Pictures) <br>\n9) <i>Black</i> (Shinya Oohira, David Production) <br>"
     },
     {
-      "id": "tt2404499",
-      "type": "series",
-      "name": "Kingdom 6th Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx190840-CvKAz6aWHB21.png",
-      "description": "Genres: Action\nTags:War/Historical/Military/Seinen/Ancient China/Ensemble Cast/Male Protagonist\nThe sixth season of <i>Kingdom</i>."
-    },
-    {
       "id": "tt37532040",
       "type": "series",
       "name": "Let’s Play",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx193968-tXbbqBOTuClj.jpg",
       "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Female Protagonist/Foreign/Video Games\nSamara “Sam” Young is a developer in Los Angeles who’s about to achieve her dreams with her first video game, Ruminate. That is, until a popular streamer gives the game a scathing review. Even worse, Sam finds out the troublesome critic is now her new neighbor! Get lost in a comedic, romantic, and all-too-real story about gaming, memes, and social anxiety. Come for the plot, stay for the doggo. <br><br>\n\n(Source: Crunchyroll) "
+    },
+    {
+      "id": "tt2404499",
+      "type": "series",
+      "name": "Kingdom 6th Season",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx190840-CvKAz6aWHB21.png",
+      "description": "Genres: Action\nTags:War/Historical/Military/Seinen/Ancient China/Ensemble Cast/Male Protagonist\nThe sixth season of <i>Kingdom</i>."
     },
     {
       "id": "tt34710525",
