--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -57,18 +57,18 @@
       "description": "Genres: Drama, Horror, Psychological, Romance, Supernatural\nTags:Monster Girl/Mermaid/Yuri/Orphan/Mythology/Rural/LGBTQ+ Themes/Coastal/Female Protagonist/Denpa/Seinen/Primarily Female Cast/Suicide\n<i>“I’ve come to eat you.”</i><br><br> So softly utters the mermaid Shiori as she emerges from the sea and takes high school girl Hinako by the hand. Hinako lives alone in a town by the sea and possesses an unusually delicious body that is irresistible to nearby monsters. To ensure that she matures to the best condition, Shiori seeks to protect Hinako—all so that someday, she can devour every piece of her. What will become of Hinako’s feelings as this looming unjust death closes in on her…?\n<BR><BR>\n(Source: Yen Press)"
     },
     {
-      "id": "tt31844203",
-      "type": "series",
-      "name": "Ranma1/2 (2024) Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185731-PJ6WKcFDUI4B.jpg",
-      "description": "Genres: Action, Comedy, Romance\nTags:Shapeshifting/Gender Bending/Martial Arts/Arranged Marriage/Tsundere/Love Triangle/Heterosexual/Female Harem/Male Harem/Shounen/Tomboy/Episodic/Ensemble Cast/Slapstick/School/Crossdressing/Animals/LGBTQ+ Themes\nThe second season of <i>Ranma 1/2 (2024)</i>.\n<br><br>\nBrace yourselves for the hilarious romantic comedy's return! What antics and arguments will Ranma and Akane get into next?\n<br><br>\n(Source: Netflix Anime)"
-    },
-    {
       "id": "tt36230718",
       "type": "series",
       "name": "My Status as an Assassin Obviously Exceeds the Hero’s",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186794-Ns8xWNdMdOxq.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Medieval/Magic/Isekai/Assassins/Conspiracy/Elf/Male Protagonist\nAkira Oda and his high school classmates are summoned to another world! While the other students are granted cheat abilities through the summoning, Akira merely gains the abilities of a mediocre “assassin.” However, his status soon surpasses “hero,” the strongest profession. After Akira becomes suspicious of the King behind the summoning, he is falsely framed for a crime and forced to flee.\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt31844203",
+      "type": "series",
+      "name": "Ranma1/2 (2024) Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185731-PJ6WKcFDUI4B.jpg",
+      "description": "Genres: Action, Comedy, Romance\nTags:Shapeshifting/Gender Bending/Martial Arts/Arranged Marriage/Tsundere/Love Triangle/Heterosexual/Female Harem/Male Harem/Shounen/Tomboy/Episodic/Ensemble Cast/Slapstick/School/Crossdressing/Animals/LGBTQ+ Themes\nThe second season of <i>Ranma 1/2 (2024)</i>.\n<br><br>\nBrace yourselves for the hilarious romantic comedy's return! What antics and arguments will Ranma and Akane get into next?\n<br><br>\n(Source: Netflix Anime)"
     },
     {
       "id": "tt28306749",
@@ -99,6 +99,13 @@
       "description": "Genres: Action, Comedy, Fantasy\nTags:Male Protagonist/Magic\nThe second half of <i>Nageki no Bourei wa Intai shitai</i>.\n<br><br>\nKrai’s adventures as a reluctant leader return, with more chaos ahead.\n<br><br>\n(Source: Crunchyroll News)"
     },
     {
+      "id": "tt32582999",
+      "type": "series",
+      "name": "Hero Without a Class: Who Even Needs Skills?!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169969-SqCjoqYT4A6Z.jpg",
+      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Shounen/Swordplay/Magic/Male Protagonist/Rural/Dungeon\nIn a world where one’s class determines everything, Arel, the son of a Sword Princess and an Archmage, was expected to inherit greatness. But when he discovers he’s classless, everything changes. Now he’s determined to prove that hard work and dedication are enough to not just succeed, but to excel as an adventurer!\n<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Mushoku no Eiyuu: Betsu ni Skill nanka Ira Nakattan Daga was streamed a week in advance of the TV broadcast on dAnimestore, ABEMA and HIDIVE beginning September 24, 2025. Regular broadcasting began on October 1, 2025.</i>"
+    },
+    {
       "id": "tt35769369",
       "type": "series",
       "name": "Chitose Is in the Ramune Bottle",
@@ -113,17 +120,10 @@
       "description": "Genres: Drama, Sports\nTags:Dancing/School Club/School/Seinen/Disability/CGI/Male Protagonist/Female Protagonist\nKaboku Kotani is starting high school, and he plans to do what he’s always done: go along with his friends, keep quiet, and not draw too much attention to himself. After all, it’s hard enough to get by with a stutter like his— why make things worse by standing out from the crowd? But then he sees another first-year, Hikari Wanda, dancing like no one is watching—or like she doesn’t care who sees her. It makes Kaboku wonder: Could he reach that same freedom? To find his way to Wanda, he does something he never thought he could: He joins the dance club. After all, every routine begins with a single step, right? Join Kaboku and Wanda as they freestyle their way to life and love!\n<br><br>\n(Source: Kodansha USA)"
     },
     {
-      "id": "tt32582999",
-      "type": "series",
-      "name": "Hero Without a Class: Who Even Needs Skills?!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169969-SqCjoqYT4A6Z.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Shounen/Male Protagonist/Swordplay/Magic/Rural/Dungeon\nIn a world where one’s class determines everything, Arel, the son of a Sword Princess and an Archmage, was expected to inherit greatness. But when he discovers he’s classless, everything changes. Now he’s determined to prove that hard work and dedication are enough to not just succeed, but to excel as an adventurer!\n<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Mushoku no Eiyuu: Betsu ni Skill nanka Ira Nakattan Daga was streamed a week in advance of the TV broadcast on dAnimestore, ABEMA and HIDIVE beginning September 24, 2025. Regular broadcasting began on October 1, 2025.</i>"
-    },
-    {
       "id": "tt37679127",
       "type": "series",
       "name": "Bukiyou na Senpai.",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b185575-cRHKCLmJI4Fr.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185575-moQeN8f5xRBv.jpg",
       "description": "Genres: Comedy, Romance\nTags:Seinen/Office Lady/Tsundere/Urban/Primarily Adult Cast\nKannawa-senpai is considered many things, but smooth is definitely not one of them. Then she meets Kamegawa, her new Kouhai. He's cute, a little nerdy, and easy to talk to. How will this awkward Senpai be able to handle these new feelings?! \n<br><br>\n(Source: Comikey) "
     },
     {
@@ -162,6 +162,13 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Magic/Primarily Female Cast/Female Protagonist/Gender Bending/Virtual World/Video Games/Super Power\nAn MMO gamer awakens as the Black-Winged Tyrant, Lufas Maphaahl, rising from her sealed fate—only to find this is very real. Her defeat 200 years ago unleashed monsters of death, and the legend is one of terror. Now, trapped in the body of history’s most feared conqueror, he must survive a world that wants her dead…and uncover why he’s here.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
+      "id": "tt36190100",
+      "type": "series",
+      "name": "Dusk Beyond the End of the World",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195153-yiRxZP5pPJLi.png",
+      "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Heterosexual/Robots/Dystopian/Post-Apocalyptic/Artificial Intelligence/Male Protagonist/Gore\nWhen growing tensions around AI spark civil unrest, Akira is caught in the crossfire when he protects his girlfriend from an assassin’s bullet. Hundreds of years later, he awakens from cryogenic sleep to an unfamiliar world. As he struggles to come to terms with his new reality, he bonds with an android called Yugure, who bears an uncanny resemblance to his girlfriend. Now, he must ask himself what love means in a world where technology has changed the very fabric of society.<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
+    },
+    {
       "id": "tt36833523",
       "type": "series",
       "name": "Tatsuki Fujimoto 17-26",
@@ -174,13 +181,6 @@
       "name": "Inexpressive Kashiwada and Expressive Oota",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx187940-3ugUhO9h0luh.jpg",
       "description": "Genres: Comedy, Romance, Slice of Life\nTags:Shounen/Kuudere/Heterosexual/School\nMeet Kashiwada-san, a female middle-school student, who remains emotionless regardless of how she is meddled with.\nAnd Oota-kun, unable to control his facial expressions, is the complete opposite of Kashiwada-san--but he keeps messing with her, against his better judgment?!\n<br><br>\nThough both of them are the exact opposite, will a mutual love eventually develop between them...?"
-    },
-    {
-      "id": "tt36190100",
-      "type": "series",
-      "name": "Dusk Beyond the End of the World",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195153-yiRxZP5pPJLi.png",
-      "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Heterosexual/Robots/Dystopian/Post-Apocalyptic/Artificial Intelligence/Male Protagonist/Gore\nWhen growing tensions around AI spark civil unrest, Akira is caught in the crossfire when he protects his girlfriend from an assassin’s bullet. Hundreds of years later, he awakens from cryogenic sleep to an unfamiliar world. As he struggles to come to terms with his new reality, he bonds with an android called Yugure, who bears an uncanny resemblance to his girlfriend. Now, he must ask himself what love means in a world where technology has changed the very fabric of society.<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
     },
     {
       "id": "tt32777700",
@@ -218,18 +218,18 @@
       "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Isekai/Parody/Female Protagonist/Male Protagonist/Chibi/Crossover/Ensemble Cast\nThe third season of <i>Isekai Quartet.</i>"
     },
     {
-      "id": "kitsu:48822",
-      "type": "series",
-      "name": "Kakuriyo -Bed & Breakfast for Spirits- 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177271-Lot4V9iMyPI7.jpg",
-      "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Shoujo/Youkai/Food\nThe second season of <i>Kakuriyo no Yadomeshi</i>.<br><br>\n\nAoi—a girl who can see spirits known as ayakashi—was suddenly approached by an ogre. Demanding she pay her grandfather’s debt, Odanna made a huge request: her hand in marriage! Refusing this absurd offer, Aoi decided to work at the Tenjin-ya bed and breakfast to pay back what her family owes. Where we left off, Aoi continues her employment at the Tenjin-ya where even more ayakashi drama ensues and challenges await her.<br><br>\n\n(Source: Crunchyroll, edited)"
-    },
-    {
       "id": "tt38412257",
       "type": "series",
       "name": "Li'l Miss Vampire Can't Suck Right",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186524-JSsyFR3FqTO8.jpg",
       "description": "Genres: Comedy, Slice of Life, Supernatural\nTags:Vampire/School/Male Protagonist/Female Protagonist/Kuudere/Heterosexual/Primarily Teen Cast\nLuna Ishikawa is a dark and mysterious vampire—or so she'd like her new classmates to believe. The truth is, while she may be one of the not-so-mythical bloodsuckers, she doesn't really live up to the hype. She's short and clumsy, and she can't even suck blood properly! So when her classmate Tatsuta Ootori discovers her little “drinking problem,” he can't help but lend a hand. Can he nurse Luna from the small, timid animal she is into a fearsome creature of the night?!\n<br><br>\n(Source: Yen Press)"
+    },
+    {
+      "id": "kitsu:48822",
+      "type": "series",
+      "name": "Kakuriyo -Bed & Breakfast for Spirits- 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177271-Lot4V9iMyPI7.jpg",
+      "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Shoujo/Youkai/Food\nThe second season of <i>Kakuriyo no Yadomeshi</i>.<br><br>\n\nAoi—a girl who can see spirits known as ayakashi—was suddenly approached by an ogre. Demanding she pay her grandfather’s debt, Odanna made a huge request: her hand in marriage! Refusing this absurd offer, Aoi decided to work at the Tenjin-ya bed and breakfast to pay back what her family owes. Where we left off, Aoi continues her employment at the Tenjin-ya where even more ayakashi drama ensues and challenges await her.<br><br>\n\n(Source: Crunchyroll, edited)"
     },
     {
       "id": "tt36912922",
@@ -288,18 +288,18 @@
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Shoujo/Isekai/Female Protagonist/Villainess\nKonoha Satou’s dark fictional past becomes her reality when she’s reincarnated as Iana Magnolia, the villainess of her own adolescent fantasy. Now as a role she meticulously designed to be despicable, remembering every last detail is a matter of life and death. Will she be able to rewrite her character’s fate into something peaceful?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt32832412",
-      "type": "series",
-      "name": "With You, Our Love Will Make It Through",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186161-rgdRQgwOJUpb.png",
-      "description": "Genres: Drama, Fantasy, Romance\nTags:Shoujo/Anthropomorphism/Heterosexual/Female Protagonist/School/Kemonomimi/CGI\nWhen high schooler Mari bumps into a fellow tardy student, she's surprised to find out he's a beastfolk who's to attend her school! After all, it's not rare for beastfolk to coexist alongside humans, but it's still uncommon, with the prejudice and all. Nervous to meet one at first, Mari soon learns there's more to him than his furry exterior. In fact, the more she gets to know him, the more she finds herself drawn to him, his steadfastness, his kindheartedness, and…his body…\n<BR><BR>\n(Source: Yen Press)"
-    },
-    {
       "id": "tt36593047",
       "type": "series",
       "name": "A Mangaka's Weirdly Wonderful Workplace",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173523-wy1rDK1NaKuc.png",
       "description": "Genres: Comedy, Slice of Life\nTags:Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Drawing/Yuri/Work/LGBTQ+ Themes\nFutami, a novice shojo manga artist, is finally publishing her beloved shogi manga, Dear Subaru. But…the stress makes her stomach hurt, she’s forced to push the deadline for her first chapter, and she isn’t making any progress on the storyboards. To top it off, she’s gaining weight from midnight snacking and starts having wild delusions! Will Futami be able to enjoy life as a manga artist?!\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt32832412",
+      "type": "series",
+      "name": "With You, Our Love Will Make It Through",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186161-rgdRQgwOJUpb.png",
+      "description": "Genres: Drama, Fantasy, Romance\nTags:Shoujo/Anthropomorphism/Heterosexual/Female Protagonist/School/Kemonomimi/CGI\nWhen high schooler Mari bumps into a fellow tardy student, she's surprised to find out he's a beastfolk who's to attend her school! After all, it's not rare for beastfolk to coexist alongside humans, but it's still uncommon, with the prejudice and all. Nervous to meet one at first, Mari soon learns there's more to him than his furry exterior. In fact, the more she gets to know him, the more she finds herself drawn to him, his steadfastness, his kindheartedness, and…his body…\n<BR><BR>\n(Source: Yen Press)"
     },
     {
       "id": "tt32856801",
@@ -334,7 +334,7 @@
       "type": "series",
       "name": "Cat's Eye",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184718-GvNnorokj1i3.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Mystery, Romance\nTags:Crime/Female Protagonist/Shounen\nA new adaption of the manga of the same name by Tsukasa Houjou. <br><br>\n<i>Cat’s Eye</i> is a secretive trio of art thieves relentlessly pursued by Detective Toshio. Unbeknownst to him, the middle sister of the elusive thieves is none other than his girlfriend, Hitomi.<br><br>\n(Source: Disney+)"
+      "description": "Genres: Action, Adventure, Comedy, Mystery, Romance\nTags:Crime/Shounen/Female Protagonist/Police/Fugitive/Episodic/Primarily Female Cast/Heterosexual/Primarily Adult Cast/Urban/Detective/Restaurant\nA new adaption of the manga of the same name by Tsukasa Houjou. <br><br>\n<i>Cat’s Eye</i> is a secretive trio of art thieves relentlessly pursued by Detective Toshio. Unbeknownst to him, the middle sister of the elusive thieves is none other than his girlfriend, Hitomi.<br><br>\n(Source: Disney+)"
     },
     {
       "id": "tt37532849",
